--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
     <script type="text/javascript" data-main="app/main" src="js/vendor/require.js"></script>
 </head>
 <body>
-    <h1>What's the time? <a data-bind="text: time, attr: { href: action }"></a></h1>
+    <h1>What's the time? <a data-bind="text: time, attr: { href: action }"></a>.</h1>
 </body>
 </html>
