Refactored to remove --module AMD support

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                     "http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1",
                     "./vendor/knockout-2.2.1"
                 ],
-                'jquery.blinky': "./vendor/jquery.blinky"
+                'jquery.blinky': "./vendor/jquery.blinky",
+                'text': "./vendor/require.text"
             },
             /*
              * The 'jquery.blinky' plugin is not an AMD module, and as such must be shimmed.
